tolk-tester/tests/invalid-declaration/err-1601.tolk
fun increment(x: int, self: int): int {
    return x + self;
}

/**
@compilation_should_fail
@stderr `self` can only be the first parameter
 */
